Fixed cubespinner component not showing face1 (node)

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -33,7 +33,7 @@
   }
 
   .face1 {
-    transform: translateZ(100px);
+    transform: translateZ(101px);
     color: #228b22;
   }
   .face2 {
